@@ -67,7 +67,7 @@ abstract class AutowireUtils {
 				}
 				int c1pl = c1.getParameterTypes().length;
 				int c2pl = c2.getParameterTypes().length;
-				return (new Integer(c1pl)).compareTo(c2pl) * -1;
+				return (Integer.valueOf(c1pl)).compareTo(c2pl) * -1;
 			}
 		});
 	}
